hello-world-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: example
spec:
  selector:
    name: hello-world
  ports:
  - protocol: TCP
    port: 5000    
    targetPort: 5000
    name: http
