example-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example
  namespace: example
spec:
  tls:
    - hosts:
        - cafe.example.com
      secretName: example
  rules:
    - host: cafe.example.com
      http:
        paths:
          - path: /tea
            backend:
              serviceName: tea-svc
              servicePort: 80
          - path: /coffee
            backend:
              serviceName: coffee-svc
              servicePort: 80
          - path: /hello
            backend:
              serviceName: hello-world
              servicePort: http
